--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,5 +4,6 @@ jobs:
     docker:
       - image: circleci/ruby:2.6.4
     steps:
+      - run: bundle update --bundler
       - checkout
       - run: bundle exec rake spec
