--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,9 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.4
+        environment:
+          BUNDLER_VERSION: 2.0.2
     working_directory: ~/work_furukawa_first_gem
     steps:
       - checkout
-      - run: bundle update --bundler
       - run: bundle exec rake spec
